# KOMPOSOS-III-ALPHA

./: .gitignore  ACKNOWLEDGMENTS.md  AUDIT_EXECUTIVE_SUMMARY.md  CORRECTED_METRICS_REPORT.md  DEEPMIND_RESULTS.md  DISTRIBUTION_GUIDE.md  DUAL_DOMAIN_RESULTS.md  FINAL_GITHUB_STATUS.md  GITHUB_RELEASE_PLAN.md  IMPLEMENTATION_COMPLETE.md  LICENSE-COMMERCIAL  NOTICE  PRE_PUSH_CHECKLIST.md  PROJECT_SUMMARY.md  PUSH_INSTRUCTIONS.md  PUSH_TO_GITHUB.sh  QUICKSTART.md  README.md  RELEASE_READY_SUMMARY.md  SUMMARY_FOR_DEEPMIND.txt  SUPPLEMENTARY_MATERIALS.md  TECHNICAL_REPORT_MODIFIED.md  check_novelty.py  cli.py  demo.py  download_model.py  homotopy_Newton_Schrodinger.md  pipeline.py  pyproject.toml
audit_scripts/: deep_discovery_oracle.py  test_compositional_leakage.py  test_protein_family_extrapolation.py  test_validation_precision.py
categorical/: __init__.py  category.py
data/: __init__.py  bio_embeddings.py  config.py  embeddings.py  protein_embeddings.py  sources.py  store.db  store.py
docs/: ARCHITECTURE.md  ARCHITECTURE_PLAN.md  DEMO_OUTPUT.md  GEOMETRIZATION_PROPOSAL.md  INTEGRATION_GUIDE.md  IP_STRATEGY.md  IP_STRATEGY_ANALYSIS.md  MASTER_IP_AND_BUSINESS_ANALYSIS.md  MATHEMATICS.md  README.md  SCALING_ROADMAP.md  SHOWCASE.md  USAGE.md  pipeline_report.md
evaluation/: __init__.py  physics_dataset.py  run_evaluation.py  scalability_benchmark.py  stress_test.py  stress_test_report.md
evaluation_reports/: 00_EVALUATION_SUMMARY.md  01_full_analysis.md  02_evolution_01_Newton_to_Dirac.md  02_evolution_02_Newton_to_Einstein.md  02_evolution_03_Galileo_to_QuantumMechanics.md  (+10 more)
(+95 files in other folders)
