[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "komposos3"
version = "0.1.0"
description = "Categorical Game-Theoretic Type-Theoretic AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "James", email = "james@example.com"}
]
keywords = [
    "category-theory",
    "homotopy-type-theory",
    "cubical-type-theory",
    "game-theory",
    "ai",
    "white-box"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "sentence-transformers>=2.2.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]
viz = [
    "matplotlib>=3.7.0",
    "graphviz>=0.20.0",
]
pdf = [
    "pymupdf>=1.23.0",
]
bibtex = [
    "bibtexparser>=1.4.0",
]
all = [
    "pymupdf>=1.23.0",
    "bibtexparser>=1.4.0",
    "matplotlib>=3.7.0",
    "graphviz>=0.20.0",
]

[project.scripts]
komposos3 = "komposos3:main"

[tool.hatch.build.targets.wheel]
packages = ["categorical", "hott", "cubical", "game", "data"]
